--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
             <version>2.7.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>3.7.0</version>
+        </dependency>
 
     </dependencies>
 
